[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "BalethonFix"
version = "1.0.1"
description = "A library for creating bots in the Bale messenger"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Sajjad", email = "sajjadalipour2006@gmail.com"},
  {name = "Abolfazl Amiri", email = "soltshen@gmail.com"}
]
keywords = ["bale", "messenger", "bot", "api", "client"]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = ["httpx==0.28.1"]

[project.urls]
"Homepage" = "https://github.com/3Shooote/Balethon"
"Download" = "https://github.com/3Shooote/Balethon/releases/latest"
"Documentation" = "https://balethon.ir"
"Tracker" = "https://github.com/3Shooote/Balethon/issues"
"Community" = "https://ble.ir/join/MTlhN2Q2Mz"
