[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "Balethon"
description = "A library for creating bots in the Bale messenger"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Sajjad", email = "sajjadalipour2006@gmail.com"},
  {name = "Abolfazl Amiri", email = "soltshen@gmail.com"}
]
keywords = ["bale", "messenger", "bot", "api", "client"]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = ["httpx==0.28.1"]

[tool.setuptools.dynamic]
version = {attr = "balethon.__version__"}

[project.urls]
"Homepage" = "https://github.com/Balethon/Balethon"
"Download" = "https://github.com/Balethon/Balethon/releases/latest"
"Documentation" = "https://balethon.ir"
"Tracker" = "https://github.com/Balethon/Balethon/issues"
"Community" = "https://ble.ir/join/MTlhN2Q2Mz"

[tool.setuptools.packages.find]
include = ["balethon*"]